// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viteSlang > can compile a shared struct between stages 1`] = `
{
  "code": "@binding(0) @group(0) var blitTexture_0 : texture_2d<f32>;

@binding(1) @group(0) var linearClampSampler_0 : sampler;

struct FullscreenTriangle_0
{
    @builtin(position) position_0 : vec4<f32>,
    @location(0) uv_0 : vec2<f32>,
};

fn FullscreenTriangle_x24init_0( position_1 : vec4<f32>,  uv_1 : vec2<f32>) -> FullscreenTriangle_0
{
    var _S1 : FullscreenTriangle_0;
    _S1.position_0 = position_1;
    _S1.uv_0 = uv_1;
    return _S1;
}

@vertex
fn vertexMain(@builtin(vertex_index) vertexIndex_0 : u32) -> FullscreenTriangle_0
{
    var _S2 : vec2<f32> = vec2<f32>(2.0f);
    var uv_2 : vec2<f32> = vec2<f32>(f32((vertexIndex_0 >> (u32(1)))), f32((vertexIndex_0 & (u32(1))))) * _S2;
    return FullscreenTriangle_x24init_0(vec4<f32>(uv_2 * _S2 - vec2<f32>(1.0f), 0.0f, 1.0f), uv_2);
}

struct pixelOutput_0
{
    @location(0) output_0 : vec4<f32>,
};

struct pixelInput_0
{
    @location(0) uv_3 : vec2<f32>,
};

@fragment
fn fragmentMain( _S3 : pixelInput_0, @builtin(position) position_2 : vec4<f32>) -> pixelOutput_0
{
    var _S4 : pixelOutput_0 = pixelOutput_0( (textureSample((blitTexture_0), (linearClampSampler_0), (_S3.uv_3))) );
    return _S4;
}

",
  "reflection": {
    "bindlessSpaceIndex": 1,
    "entryPoints": [
      {
        "name": "vertexMain",
        "parameters": [
          {
            "name": "vertexIndex",
            "semanticName": "SV_VERTEXID",
            "type": {
              "kind": "scalar",
              "scalarType": "uint32",
            },
          },
        ],
        "result": {
          "binding": {
            "index": 0,
            "kind": "varyingOutput",
          },
          "stage": "vertex",
          "type": {
            "fields": [
              {
                "name": "position",
                "semanticName": "SV_POSITION",
                "type": {
                  "elementCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32",
                  },
                  "kind": "vector",
                },
              },
              {
                "binding": {
                  "index": 0,
                  "kind": "varyingOutput",
                },
                "name": "uv",
                "semanticName": "TEXCOORD",
                "stage": "vertex",
                "type": {
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32",
                  },
                  "kind": "vector",
                },
              },
            ],
            "kind": "struct",
            "name": "FullscreenTriangle",
          },
        },
        "stage": "vertex",
      },
      {
        "name": "fragmentMain",
        "parameters": [
          {
            "binding": {
              "index": 0,
              "kind": "varyingInput",
            },
            "name": "input",
            "stage": "fragment",
            "type": {
              "fields": [
                {
                  "name": "position",
                  "semanticName": "SV_POSITION",
                  "type": {
                    "elementCount": 4,
                    "elementType": {
                      "kind": "scalar",
                      "scalarType": "float32",
                    },
                    "kind": "vector",
                  },
                },
                {
                  "binding": {
                    "index": 0,
                    "kind": "varyingInput",
                  },
                  "name": "uv",
                  "semanticName": "TEXCOORD",
                  "stage": "fragment",
                  "type": {
                    "elementCount": 2,
                    "elementType": {
                      "kind": "scalar",
                      "scalarType": "float32",
                    },
                    "kind": "vector",
                  },
                },
              ],
              "kind": "struct",
              "name": "FullscreenTriangle",
            },
          },
        ],
        "result": {
          "binding": {
            "index": 0,
            "kind": "varyingOutput",
          },
          "semanticName": "SV_TARGET",
          "stage": "fragment",
          "type": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
        "stage": "fragment",
      },
    ],
    "parameters": [
      {
        "binding": {
          "index": 0,
          "kind": "descriptorTableSlot",
        },
        "name": "blitTexture",
        "type": {
          "baseShape": "texture2D",
          "kind": "resource",
          "resultType": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
      },
      {
        "binding": {
          "index": 1,
          "kind": "descriptorTableSlot",
        },
        "name": "linearClampSampler",
        "type": {
          "kind": "samplerState",
        },
      },
    ],
  },
}
`;

exports[`viteSlang > can compile to WGSL by default 1`] = `
{
  "code": "struct SLANG_ParameterGroup_Globals_std140_0
{
    @align(16) time_0 : f32,
};

@binding(0) @group(0) var<uniform> Globals_0 : SLANG_ParameterGroup_Globals_std140_0;
struct vertexOutput_0
{
    @builtin(position) output_0 : vec4<f32>,
};

@vertex
fn vmain(@builtin(vertex_index) vertexIndex_0 : u32) -> vertexOutput_0
{
    var _S1 : vertexOutput_0 = vertexOutput_0( vec4<f32>(vec2<f32>(f32((((vertexIndex_0 << (u32(1)))) & (u32(2)))), f32((vertexIndex_0 & (u32(2))))) * vec2<f32>(2.0f) - vec2<f32>(1.0f), 0.0f, 1.0f) );
    return _S1;
}

struct pixelOutput_0
{
    @location(0) output_1 : vec4<f32>,
};

@fragment
fn fmain(@builtin(position) position_0 : vec4<f32>) -> pixelOutput_0
{
    var _S2 : pixelOutput_0 = pixelOutput_0( vec4<f32>(vec3<f32>(0.80000001192092896f, 0.69999998807907104f, 1.0f) + vec3<f32>(0.30000001192092896f) * cos(normalize(position_0.xy / vec2<f32>(position_0.w)).xyx + vec3<f32>(Globals_0.time_0)), 1.0f) );
    return _S2;
}

",
  "reflection": {
    "bindlessSpaceIndex": 1,
    "entryPoints": [
      {
        "name": "vmain",
        "parameters": [
          {
            "name": "vertexIndex",
            "semanticName": "SV_VERTEXID",
            "type": {
              "kind": "scalar",
              "scalarType": "uint32",
            },
          },
        ],
        "result": {
          "semanticName": "SV_POSITION",
          "type": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
        "stage": "vertex",
      },
      {
        "name": "fmain",
        "parameters": [
          {
            "name": "position",
            "semanticName": "SV_POSITION",
            "type": {
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32",
              },
              "kind": "vector",
            },
          },
        ],
        "result": {
          "binding": {
            "index": 0,
            "kind": "varyingOutput",
          },
          "semanticName": "SV_TARGET",
          "stage": "fragment",
          "type": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
        "stage": "fragment",
      },
    ],
    "parameters": [
      {
        "binding": {
          "index": 0,
          "kind": "descriptorTableSlot",
        },
        "name": "Globals",
        "type": {
          "containerVarLayout": {
            "binding": {
              "index": 0,
              "kind": "descriptorTableSlot",
            },
          },
          "elementType": {
            "fields": [
              {
                "binding": {
                  "elementStride": 0,
                  "kind": "uniform",
                  "offset": 0,
                  "size": 4,
                },
                "name": "time",
                "type": {
                  "kind": "scalar",
                  "scalarType": "float32",
                },
              },
            ],
            "kind": "struct",
          },
          "elementVarLayout": {
            "binding": {
              "elementStride": 0,
              "kind": "uniform",
              "offset": 0,
              "size": 16,
            },
            "type": {
              "fields": [
                {
                  "binding": {
                    "elementStride": 0,
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4,
                  },
                  "name": "time",
                  "type": {
                    "kind": "scalar",
                    "scalarType": "float32",
                  },
                },
              ],
              "kind": "struct",
            },
          },
          "kind": "constantBuffer",
        },
      },
    ],
  },
}
`;

exports[`viteSlang > can handle link errors 1`] = `
"[31m[vite-slang] USER error: error[E41009]: non-void function must return
 --> ./shaders/link-error.slang:1:7
  |
1 | float typeError() {
  |       ^^^^^^^^^ non-void function must return in all cases for target 'wgsl'
--'
[39m
file: [36m./shaders/link-error.slang[39m"
`;

exports[`viteSlang > can resolve #include directives 1`] = `
{
  "code": "struct SLANG_ParameterGroup_Globals_std140_0
{
    @align(16) time_0 : f32,
};

@binding(0) @group(0) var<uniform> Globals_0 : SLANG_ParameterGroup_Globals_std140_0;
struct vertexOutput_0
{
    @builtin(position) output_0 : vec4<f32>,
};

@vertex
fn vmain(@builtin(vertex_index) vertexIndex_0 : u32) -> vertexOutput_0
{
    var _S1 : vertexOutput_0 = vertexOutput_0( vec4<f32>(vec2<f32>(f32((((vertexIndex_0 << (u32(1)))) & (u32(2)))), f32((vertexIndex_0 & (u32(2))))) * vec2<f32>(2.0f) - vec2<f32>(1.0f), 0.0f, 1.0f) );
    return _S1;
}

struct pixelOutput_0
{
    @location(0) output_1 : vec4<f32>,
};

@fragment
fn fmain(@builtin(position) position_0 : vec4<f32>) -> pixelOutput_0
{
    var _S2 : pixelOutput_0 = pixelOutput_0( vec4<f32>(vec3<f32>(0.80000001192092896f, 0.69999998807907104f, 1.0f) + vec3<f32>(0.30000001192092896f) * cos(normalize(position_0.xy / vec2<f32>(position_0.w)).xyx + vec3<f32>(Globals_0.time_0)), 1.0f) );
    return _S2;
}

",
  "reflection": {
    "bindlessSpaceIndex": 1,
    "entryPoints": [
      {
        "name": "vmain",
        "parameters": [
          {
            "name": "vertexIndex",
            "semanticName": "SV_VERTEXID",
            "type": {
              "kind": "scalar",
              "scalarType": "uint32",
            },
          },
        ],
        "result": {
          "semanticName": "SV_POSITION",
          "type": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
        "stage": "vertex",
      },
      {
        "name": "fmain",
        "parameters": [
          {
            "name": "position",
            "semanticName": "SV_POSITION",
            "type": {
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32",
              },
              "kind": "vector",
            },
          },
        ],
        "result": {
          "binding": {
            "index": 0,
            "kind": "varyingOutput",
          },
          "semanticName": "SV_TARGET",
          "stage": "fragment",
          "type": {
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32",
            },
            "kind": "vector",
          },
        },
        "stage": "fragment",
      },
    ],
    "parameters": [
      {
        "binding": {
          "index": 0,
          "kind": "descriptorTableSlot",
        },
        "name": "Globals",
        "type": {
          "containerVarLayout": {
            "binding": {
              "index": 0,
              "kind": "descriptorTableSlot",
            },
          },
          "elementType": {
            "fields": [
              {
                "binding": {
                  "elementStride": 0,
                  "kind": "uniform",
                  "offset": 0,
                  "size": 4,
                },
                "name": "time",
                "type": {
                  "kind": "scalar",
                  "scalarType": "float32",
                },
              },
            ],
            "kind": "struct",
          },
          "elementVarLayout": {
            "binding": {
              "elementStride": 0,
              "kind": "uniform",
              "offset": 0,
              "size": 16,
            },
            "type": {
              "fields": [
                {
                  "binding": {
                    "elementStride": 0,
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4,
                  },
                  "name": "time",
                  "type": {
                    "kind": "scalar",
                    "scalarType": "float32",
                  },
                },
              ],
              "kind": "struct",
            },
          },
          "kind": "constantBuffer",
        },
      },
    ],
  },
}
`;

exports[`viteSlang > identifies valid include guards 1`] = `
{
  "code": "@compute
@workgroup_size(1, 1, 1)
fn validGuard(@builtin(global_invocation_id) dispatchThreadId_0 : vec3<u32>)
{
    return;
}

",
  "reflection": {
    "bindlessSpaceIndex": 0,
    "entryPoints": [
      {
        "name": "validGuard",
        "parameters": [
          {
            "name": "dispatchThreadId",
            "semanticName": "SV_DISPATCHTHREADID",
            "type": {
              "elementCount": 2,
              "elementType": {
                "kind": "scalar",
                "scalarType": "uint32",
              },
              "kind": "vector",
            },
          },
        ],
        "stage": "compute",
        "threadGroupSize": [
          1,
          1,
          1,
        ],
      },
    ],
    "parameters": [],
  },
}
`;

exports[`viteSlang > ignores commented-out include guards 1`] = `
{
  "code": "@compute
@workgroup_size(1, 1, 1)
fn commentGuard(@builtin(global_invocation_id) dispatchThreadId_0 : vec3<u32>)
{
    return;
}

",
  "reflection": {
    "bindlessSpaceIndex": 0,
    "entryPoints": [
      {
        "name": "commentGuard",
        "parameters": [
          {
            "name": "dispatchThreadId",
            "semanticName": "SV_DISPATCHTHREADID",
            "type": {
              "elementCount": 2,
              "elementType": {
                "kind": "scalar",
                "scalarType": "uint32",
              },
              "kind": "vector",
            },
          },
        ],
        "stage": "compute",
        "threadGroupSize": [
          1,
          1,
          1,
        ],
      },
    ],
    "parameters": [],
  },
}
`;

exports[`viteSlang > ignores defines mid-file from include scan 1`] = `
{
  "code": "@compute
@workgroup_size(1, 1, 1)
fn main(@builtin(global_invocation_id) dispatchThreadId_0 : vec3<u32>)
{
    var _S1 : vec2<u32> = dispatchThreadId_0.xy;
    _S1[i32(0)] = _S1[i32(0)] + u32(1);
    return;
}

",
  "reflection": {
    "bindlessSpaceIndex": 0,
    "entryPoints": [
      {
        "name": "main",
        "parameters": [
          {
            "name": "dispatchThreadId",
            "semanticName": "SV_DISPATCHTHREADID",
            "type": {
              "elementCount": 2,
              "elementType": {
                "kind": "scalar",
                "scalarType": "uint32",
              },
              "kind": "vector",
            },
          },
        ],
        "stage": "compute",
        "threadGroupSize": [
          1,
          1,
          1,
        ],
      },
    ],
    "parameters": [],
  },
}
`;

exports[`viteSlang > prevents infinite recursion via include guards 1`] = `
"[31m[vite-slang] Circular dependency detected: C:\\Users\\Cody Bennett\\Documents\\GitHub\\vite-slang\\tests\\shaders\\circular-a.slang -> C:\\Users\\Cody Bennett\\Documents\\GitHub\\vite-slang\\tests\\shaders\\circular-b.slang -> C:\\Users\\Cody Bennett\\Documents\\GitHub\\vite-slang\\tests\\shaders\\circular-a.slang[39m
file: [36m./shaders/circular-a.slang[39m"
`;

exports[`viteSlang > throws if entrypoints are not defined 1`] = `
"[31m[vite-slang] An entrypoint must be defined with a shader stage attribute! Try adding [shader("fragment")] before your entrypoint method.[39m
file: [36m./shaders/empty.slang[39m"
`;

exports[`viteSlang > throws on shader compilation error 1`] = `
"[31m[vite-slang] USER error: error[E30015]: undefined identifier
 --> ./shaders/broken.slang:4:3
  |
4 | error;
  | ^^^^^ undefined identifier 'error'.
--'
error[E39999]: import failed due to compilation error
fatal error[E40003]: compilation ceased
abort compilation: fatal error[E40003]: compilation ceased
[39m
file: [36m./shaders/broken.slang[39m"
`;

exports[`viteSlang > throws on unresolved #include directive 1`] = `
"[31m[vite-slang] USER error: error[E15300]: include file not found
 --> ./shaders/include-error.slang:4:10
  |
4 | #include "include-2.slang"
  |          ^^^^^^^^^^^^^^^^^ failed to find include file 'include-2.slang'
--'
error[E39999]: import failed due to compilation error
fatal error[E40003]: compilation ceased
abort compilation: fatal error[E40003]: compilation ceased
[39m
file: [36m./shaders/include-error.slang[39m"
`;

exports[`viteSlang > throws on unsupported target 1`] = `
"[31m[vite-slang] Unsupported Slang target: unsupported.[39m
file: [36m./shaders/triangle.slang[39m"
`;
